--- a/default.css
+++ b/default.css
@@ -706,7 +706,7 @@ ul.contact li a.icon-rss:before
 	#header-featured
 	{
 		height: 30em;
-		background-image: url(images/banner.jpg);
+		background-image: url(images/banner.png);
 		background-position: center;
 		background-size: cover;
 	}
