--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,10 @@ html, body {
     margin: 0;
     padding: 0;
     min-height: 100%;
+    background-color: #f2f2f2
+
 }
+
 
 .nav ul {
     margin: 0;
@@ -32,7 +35,7 @@ html, body {
 .nav a {
     display: inline-block;
     padding: .5em;
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
@@ -51,14 +54,27 @@ html, body {
     background-color: rgba(255, 255, 255, .3)
 }
 
+/* not used */
 .main-header {
-    background-color: rgba(0, 0, 0, .6);
-    background-image: url("Images/Header Background.jpg");
+    /* opacity: 0.5; */
+    background-color: white;
+    background-image: url("images/banner.jpg");
     background-blend-mode: multiply;
-    background-size: cover;
-    padding-bottom: 30px;
+    /* background-size: cover; */
+    padding-bottom: 300px;
+    max-width: 50%;
+    max-height: 50%;
+    /* background-size: 100px 100px; */
+    background-size:100% 100%;
 }
 
+.banner {
+    display: block;
+    margin:auto;
+    /* width: 50%; */
+    background: transparent;
+    
+}
 .band-name {
     text-align: center;
     margin: 0;
@@ -158,15 +174,18 @@ html, body {
 }
 
 .btn-primary {
-    color: white;
-    background-color: #F2600B;
+    color: black;
+    border-color: black;
+    background-color: #f2f2f2;
     border: none;
     border-radius: .3em;
     font-weight: bold;
+    border: 2px solid black;
 }
 
 .btn-primary:hover {
-    background-color: rgb(219, 71, 45);
+    color: #f2f2f2;
+    background-color:rgb(43, 39, 36);
 }
 
 .tour-row {
@@ -284,14 +303,14 @@ html, body {
 
 .btn-danger {
     color: white;
-    background-color: rgb(235, 220, 87);
+    background-color: black;
     border: none;
     border-radius: .3em;
     font-weight: bold;
 }
 
 .btn-danger:hover {
-    background-color: rgb(202, 204, 76);
+    background-color: gray;
 }
 
 .cart-quantity-input {
@@ -349,7 +368,7 @@ html, body {
     z-index: 1;
     top: 20px;
     left: 0px;
-    background: white;
+    background: #f2f2f2;
     overflow-x: hidden;
     padding: 8px 0;
   }
